fix: execute snipet and read memory as error
