# src/modules/knowledge/snipet/dto/read-memory-as.dto.ts
@@ -23,6 +23,17 @@ export enum ChatRole {
   ASSISTANT = "assistant"
 }
 
+export class Reference {
+  @Field({ type: "string", required: true, uuid: true })
+  referenceId: string;
+
+  @Field({ type: "string", required: true })
+  referenceName: string;
+
+  @Field({ type: "object", additionalProperties: true })
+  data: any;
+}
+
 export class ChatDto {
   @Field({ type: "string", uuid: true, required: true })
   id: string;
@@ -38,6 +49,9 @@ export class ChatDto {
 
   @Field({ type: "date", required: false })
   updatedAt?: Date;
+
+  @Field({ type: "class", class: () => Reference, isArray: true, required: false })
+  references?: Reference[];
 
   constructor(partial: ChatDto) {
     Object.assign(this, partial);
